<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.ch.heig_vd.sym.labo3.MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instruction"/>
    <EditText
        android:id="@+id/editMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/editPWD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"/>
    <Button
        android:id="@+id/scanQRButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Scan QR"/>
    <TextView  android:id="@+id/textViewResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"/>
    <TextView
        android:id="@+id/very_secret_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/very_secret_string"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/secret_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secret_string"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/public_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_secret_string"
        android:visibility="visible"/>
    <TextView
        android:id="@+id/qrResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"/>

</LinearLayout>
